--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>
+
     <title>Movielist</title>
+
+    <style>
+    #contenedorMapa{
+        height: 400px;
+        width: 500px;
+    }
+    </style>
+
 </head>
 <body>
     <ion-app>
@@ -124,7 +142,7 @@
               <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
               </ion-buttons>
-              <ion-title>Pedidos hoy</ion-title>
+              <ion-title>Movielist</ion-title>
             </ion-toolbar>
           </ion-header>
 
@@ -172,7 +190,7 @@
               <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
               </ion-buttons>
-              <ion-title>Pedidos hoy</ion-title>
+              <ion-title>Movielist</ion-title>
             </ion-toolbar>
           </ion-header>
 
@@ -182,7 +200,7 @@
                 <ion-input label="Nombre de la pelicula" id="registroPeliculaNombre"></ion-input>
               </ion-item>
               <ion-item>
-                <ion-input label="Fecha" type="date" id="registoPeliculaFecha"></ion-input>
+                <ion-input label="Fecha" type="date" id="registroPeliculaFecha"></ion-input>
               </ion-item>
               <ion-list>
                 <ion-item>
@@ -191,7 +209,7 @@
                   </ion-select>
                 </ion-item>
                 <ion-item>
-                  <ion-input label="Comentario" type="textarea" id="registoPeliculaComentario"></ion-input>
+                  <ion-input label="Comentario" type="textarea" id="registroPeliculaComentario"></ion-input>
                 </ion-item>
               </ion-list>
                 <ion-button expand="block" id="btnRegistrarPelicula">Subir pelicula</ion-button>
@@ -206,7 +224,7 @@
               <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
               </ion-buttons>
-              <ion-title>Pedidos hoy</ion-title>
+              <ion-title>Movielist</ion-title>
             </ion-toolbar>
           </ion-header>
 
@@ -241,13 +259,14 @@
               <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
               </ion-buttons>
-              <ion-title>Pedidos hoy</ion-title>
+              <ion-title>Movielist</ion-title>
             </ion-toolbar>
           </ion-header>
 
           <ion-content class="ion-padding">
             <ion-item><ion-label>Pantalla mapa usuarios</ion-label></ion-item>
-          </ion-content>
+              <div id="contenedorMapa" style="height:500px;"></div>
+            </ion-content>
         </page-mapaUsuarios>
 
 
